# yapss

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  LICENSE  Makefile  README.md  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_template.md
.github/workflows/: ci.yml  tests.yml
_modules/: index.html
_modules/yapss/_private/: bounds.html  guess.html  ipopt_options.html  problem.html  solution.html
_modules/yapss/examples/: brachistochrone.html  brachistochrone_minimal.html  delta_iii_ascent.html  dynamic_soaring.html  goddard_problem_1_phase.html  goddard_problem_3_phase.html  hs071.html  isoperimetric.html  minimum_time_to_climb.html  newton.html  orbit_raising.html  rosenbrock.html
_sources/: CONTRIBUTING.md.txt  license.rst.txt
_sources/notebooks/: brachistochrone.ipynb.txt  delta_iii_ascent.ipynb.txt  goddard_problem_1_phase.ipynb.txt  newton.ipynb.txt
_sources/reference/: configuration.rst.txt  derivatives.rst.txt  problem.rst.txt  solution.rst.txt
_sources/scripts/: brachistochrone_minimal.rst.txt  goddard_problem_1_phase.rst.txt  hs071.rst.txt  isoperimetric.rst.txt  rosenbrock.rst.txt
conda/: environment-test.yml  environment.yml
conda/recipe/: meta.yaml
docs/development/: Makefile
docs/development/source/: conf.py  index.rst
docs/development/source/_static/css/: custom.css
docs/user_guide/: Makefile  conf.py  index.md  link_modifier.py  references.bib
docs/user_guide/_static/css/: custom.css
docs/user_guide/notebooks/: Makefile  index.rst
docs/user_guide/reference/: bounds.rst  callbacks.rst  guess.rst  ipopt_options.rst  mesh_structure.rst  scaling.rst  user_derivatives.rst
docs/user_guide/scripts/: Makefile  brachistochrone.rst  delta_iii_ascent.rst  dynamic_soaring.rst  goddard_problem_3_phase.rst  index.rst  minimum_time_to_climb.rst  newton.rst  orbit_raising.rst
docs/user_guide/scripts/plots/: Makefile  make_plots.py
examples/notebooks/: Makefile  brachistochrone.ipynb  delta_iii_ascent.ipynb  dynamic_soaring.ipynb  goddard_problem_1_phase.ipynb  goddard_problem_3_phase.ipynb  hs071.ipynb  isoperimetric.ipynb  minimum_time_to_climb.ipynb  newton.ipynb  orbit_raising.ipynb  rosenbrock.ipynb  tutorial.ipynb
notebooks/: brachistochrone.html  delta_iii_ascent.html  dynamic_soaring.html  dynamic_soaring.ipynb  goddard_problem_1_phase.html  goddard_problem_3_phase.html  goddard_problem_3_phase.ipynb  hs071.html  hs071.ipynb  index.html  isoperimetric.html  isoperimetric.ipynb  minimum_time_to_climb.html  minimum_time_to_climb.ipynb  newton.html  orbit_raising.html  orbit_raising.ipynb  rosenbrock.html  rosenbrock.ipynb  tutorial.html  tutorial.ipynb
reference/: bounds.html  callbacks.html  configuration.html  derivatives.html  guess.html  ipopt_options.html  mesh_structure.html  problem.html  scaling.html  solution.html  user_derivatives.html
scripts/: brachistochrone.html  brachistochrone_minimal.html  delta_iii_ascent.html  dynamic_soaring.html  goddard_problem_1_phase.html  goddard_problem_3_phase.html  hs071.html  index.html  isoperimetric.html  minimum_time_to_climb.html  newton.html  orbit_raising.html  rosenbrock.html
src/yapss/: __init__.py
src/yapss/_private/: auto.py  bounds.py  central_difference.py  config.py  finite_difference.py  guess.py  input_args.py  ipopt_options.py  mesh.py  nlp.py  problem.py  quadrature.py  solution.py  solver.py  structure.py  types_.py  user.py
src/yapss/examples/: __init__.py  brachistochrone.py  brachistochrone_minimal.py  delta_iii_ascent.py  dynamic_soaring.py  goddard_problem_1_phase.py  goddard_problem_3_phase.py  hs071.py  isoperimetric.py  minimum_time_to_climb.py  newton.py  orbit_raising.py  rosenbrock.py
src/yapss/math/: __init__.py  functions.py  wrapper.py
tests/: conftest.py
tests/conda/: test_recipes.py
tests/derivatives/: test_nonlinear_continuous.py  test_nonlinear_discrete.py  test_nonlinear_objective.py  test_small_nonlinear_continuous_jacobian.py
tests/examples/: test_brachistochrone.py  test_brachistochrone_minimal.py  test_delta_iii_ascent.py  test_dynamic_soaring.py  test_example_main.py  test_goddard_problem_1_phase.py  test_goddard_problem_3_phase.py  test_hs071.py  test_isoperimetric.py  test_minimum_fuel_to_climb.py  test_minimum_time_to_climb.py  test_newton.py  test_newton_2.py  test_orbit_raising.py  test_rosenbrock.py
tests/modules/: test_auto.py  test_bounds.py  test_guess.py  test_ipopt_options.py  test_math.py  test_problem.py  test_quadrature.py
utils/: get_ipopt_options.py
